--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint",
     "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.2.7",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
